--- a/styles.css
+++ b/styles.css
@@ -723,7 +723,7 @@ footer .redes a:hover {
     }
 
     .skills .fila .col .slider {
-        width: 100%;
+        width: 60vh;
     }
 
     .curriculum .fila {
