--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ html {
 body .hr {
     display: flex;
     justify-content: center;
-    margin-top: 5%;
+    margin-top: 2%;
 }
 
 /* MENÜ */
@@ -89,18 +89,19 @@ body .hr {
 .inicio .contenido-banner {
     padding: 20px;
     background-color: #1e2326;
-    max-width: 350px;
+    max-width: 450px;
     margin: auto;
     text-align: center;
     border-radius: 40px;
 }
 
-.inicio .contenido-banner img {
-    border: 5px solid #775051;
+.inicio .contenido-banner .contenedor-img img {
+    /* border: 2px solid #775051; */
     display: block;
     width: 80%;
+    height: 20%;
     margin: auto;
-    border-radius: 100%;
+    border-radius: 20%;
     margin-top: 25%;
 }
 
@@ -192,14 +193,14 @@ body .hr {
 
 .sobremi .contenido-seccion {
     max-width: 1100px;
-    margin: auto;
+    margin: 20px;
 }
 
 .sobremi h2 {
     text-align: center;
     font-size: 28px;
     font-family: 'Montserrat';
-    margin-bottom: 9%;
+    margin-bottom: 5%;
     margin-top: 2%;
     color: #fff;
 }
@@ -209,7 +210,6 @@ body .hr {
     font-size: 20px;
     color: rgba(234, 234, 234, 0.8);
     justify-content: baseline;
-    margin-bottom: 15px;
 }
 
 /* SKILLS */
